ui: Fix alignments and spacing for Cluster Overview page
- Rename nodes to N{nodeId} format according to provided styles;
- Highlight links in Nodes table when hover on entire row;
- Align section titles by center;

Release note (admin ui change): Cluster Overview view changed

--- a/pkg/ui/src/views/cluster/containers/nodesOverview/nodes.styl
+++ b/pkg/ui/src/views/cluster/containers/nodesOverview/nodes.styl
@@ -11,7 +11,7 @@
 @require '~src/components/core/index.styl'
 
 .embedded-table
-  padding 0 $spacing-medium-small $spacing-medium-small
+  padding 0 $spacing-medium-small $spacing-base
 
 .nodes-overview
   background $colors--neutral-1
@@ -39,3 +39,10 @@
 
 .nodes-list-container > *:last-child
   margin-bottom 0
+
+.nodes-overview__panel .crl-table-wrapper .ant-table-row:hover .nodes-table__link
+  color $colors--primary-blue-3
+  text-decoration underline
+
+.nodes-table__link
+  color $colors--neutral-7
